--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "types": "./index.d.ts",
   "repository": {
     "type": "git",
-    "url": "https://github.com/krisk/Fuse.git"
+    "url": "https://github.com/WilliamBewzenko/Fuse.git"
   },
   "homepage": "http://fusejs.io",
   "dependencies": {},
